# docs/swagger.json
@@ -117,10 +117,10 @@
                 "uid": {
                     "type": "string"
                 },
-                "user_events": {
+                "user_objects": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.UserEvent"
+                        "$ref": "#/definitions/models.UserObject"
                     }
                 }
             }
@@ -136,6 +136,20 @@
                 },
                 "event_name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserObject": {
+            "type": "object",
+            "properties": {
+                "object_name": {
+                    "type": "string"
+                },
+                "user_events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserEvent"
+                    }
                 }
             }
         }
